Fixed screen distortion for max width 444px

--- a/src/components/style/DisplayTemplates.css
+++ b/src/components/style/DisplayTemplates.css
@@ -123,7 +123,7 @@
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 444px) {
   .display-templates h1 {
     font-size: 20px;
   }
