--- a/src/components/style/Stile.css
+++ b/src/components/style/Stile.css
@@ -103,7 +103,7 @@
 }
 
 /* Mobile devices (max-width: 440px) */
-@media (max-width: 440px) {
+@media (max-width: 444px) {
   .btn {
     max-width: 300px;
     min-width: 300px;
